restructure project directories

--- a/roles/commcare_sync/templates/django/gunicorn_start_script.j2
+++ b/roles/commcare_sync/templates/django/gunicorn_start_script.j2
@@ -3,7 +3,7 @@
 echo "Starting {{ app_name }} as `whoami`"
 
 # Activate the virtual environment.
-cd {{ project_dir }}
+cd {{ src_dir }}
 . {{ virtualenv_dir }}/bin/activate
 
 # Set additional environment variables.
