set host from var and remove redundant vars from dev environment

--- a/roles/commcare_sync/templates/django/local.py.j2
+++ b/roles/commcare_sync/templates/django/local.py.j2
@@ -16,5 +16,5 @@ ACCOUNT_ADAPTER = 'apps.users.account_adapter.EmailAsUsernameAdapter'
 # ACCOUNT_ADAPTER = 'apps.users.account_adapter.NoNewUsersAccountAdapter'
 
 ALLOWED_HOSTS = [
-    '192.168.11.10',
+    '{{ public_host }}',
 ]
