don't use gevent with celery

--- a/roles/commcare_sync/templates/django/celery_default_start_script.j2
+++ b/roles/commcare_sync/templates/django/celery_default_start_script.j2
@@ -17,6 +17,4 @@ exec celery worker \
     --loglevel DEBUG \
     --logfile {{ log_dir }}/celery.log \
     -Q celery \
-    --concurrency 10 \
-    --pool eventlet \
-    --events
+    --concurrency 10
