--- a/roles/commcare_sync/templates/django/local.py.j2
+++ b/roles/commcare_sync/templates/django/local.py.j2
@@ -18,3 +18,5 @@ ACCOUNT_ADAPTER = 'apps.users.account_adapter.EmailAsUsernameAdapter'
 ALLOWED_HOSTS = [
     '{{ public_host }}',
 ]
+
+DEBUG = False
