--- a/roles/commcare_sync/templates/django/celery_default_start_script.j2
+++ b/roles/commcare_sync/templates/django/celery_default_start_script.j2
@@ -17,4 +17,5 @@ exec celery worker \
     --loglevel DEBUG \
     --logfile {{ log_dir }}/celery.log \
     -Q celery \
-    --concurrency 10
+    --concurrency 10 \
+    -B
