remove default_server from superset nginx config

--- a/roles/commcare_sync/templates/nginx/superset_nginx_without_ssl_config.j2
+++ b/roles/commcare_sync/templates/nginx/superset_nginx_without_ssl_config.j2
@@ -14,8 +14,8 @@ upstream superset {
 server {
   # Serve content
   server_name {{ superset_public_host }};
-  listen 80 default_server;
-  listen [::]:80 default_server;
+  listen 80;
+  listen [::]:80;
 
   client_max_body_size 4G;
 
