add periodicity and timezone support

--- a/roles/commcare_sync/templates/django/local.py.j2
+++ b/roles/commcare_sync/templates/django/local.py.j2
@@ -20,3 +20,6 @@ ALLOWED_HOSTS = [
 ]
 
 DEBUG = False
+
+COMMCARE_SYNC_EXPORT_PERIODICITY = {{ commcare_sync_export_periodicity }}
+TIME_ZONE = '{{ project_timezone }}'
