--- a/roles/commcare_sync/templates/postgres/postgresql.conf.j2
+++ b/roles/commcare_sync/templates/postgres/postgresql.conf.j2
@@ -56,7 +56,12 @@ external_pid_file = '/var/run/postgresql/10-main.pid'			# write an extra PID fil
 
 # - Connection Settings -
 
+
+{% if postgresql_allow_remote_connections %}
 listen_addresses = '*' # what IP address(es) to listen on;
+{% else %}
+listen_addresses = 'localhost' # what IP address(es) to listen on;
+{% endif %}
 					             # comma-separated list of addresses;
 					             # defaults to 'localhost'; use '*' for all
 					             # (change requires restart)
