Make SECRET_KEY configurable

--- a/roles/commcare_sync/templates/django/local.py.j2
+++ b/roles/commcare_sync/templates/django/local.py.j2
@@ -1,5 +1,9 @@
 from .settings import *
 
+{% if django_secret_key %}
+SECRET_KEY = '{{ django_secret_key }}'
+{% endif %}
+
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
