Disabling default supervisor logrotation and rotating logs using logrotate

--- a/roles/commcare_sync/templates/django/celery_default_supervisor_config.j2
+++ b/roles/commcare_sync/templates/django/celery_default_supervisor_config.j2
@@ -3,3 +3,7 @@ command = {{ virtualenv_dir }}/bin/celery_default_start
 user = {{ app_user }}
 stdout_logfile = {{ log_dir }}/celery.log
 stderr_logfile = {{ log_dir }}/celery.log
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile_backups=0
+stderr_logfile_backups=0
