--- a/roles/commcare_sync/templates/django/gunicorn_supervisor_config.j2
+++ b/roles/commcare_sync/templates/django/gunicorn_supervisor_config.j2
@@ -3,3 +3,7 @@ command = {{ virtualenv_dir }}/bin/gunicorn_start
 user = {{ app_user }}
 stdout_logfile = {{ log_dir }}/gunicorn.log
 stderr_logfile = {{ log_dir }}/gunicorn.log
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile_backups=0
+stderr_logfile_backups=0
