--- a/roles/commcare_sync/templates/superset/superset_supervisor_config.j2
+++ b/roles/commcare_sync/templates/superset/superset_supervisor_config.j2
@@ -5,3 +5,7 @@ command = {{ superset_virtualenv_dir }}/bin/superset_start
 user = {{ app_user }}
 stdout_logfile = {{ log_dir }}/superset.log
 stderr_logfile = {{ log_dir }}/superset.log
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile_backups=0
+stderr_logfile_backups=0
