allow setting commcare_default_server

--- a/roles/commcare_sync/templates/django/local.py.j2
+++ b/roles/commcare_sync/templates/django/local.py.j2
@@ -30,3 +30,5 @@ DEBUG = False
 
 COMMCARE_SYNC_EXPORT_PERIODICITY = {{ commcare_sync_export_periodicity }}
 TIME_ZONE = '{{ project_timezone }}'
+
+COMMCARE_DEFAULT_SERVER = '{{ commcare_default_server }}'
