Add FF support for superset

--- a/roles/commcare_sync/templates/superset/superset_config.py.j2
+++ b/roles/commcare_sync/templates/superset/superset_config.py.j2
@@ -2,3 +2,8 @@ PUBLIC_ROLE_LIKE_GAMMA = True
 SQLALCHEMY_DATABASE_URI = 'postgresql://{{ default_db_user }}:{{ default_db_password }}@{{ default_db_host }}:{{ default_db_port }}/{{ superset_db_name }}'
 MAPBOX_API_KEY = '{{ mapbox_api_key }}'
 SECRET_KEY = '{{ superset_secret_key }}'
+FEATURE_FLAGS = {
+{% for flag in superset_feature_flags %}
+    '{{ flag }}': True,
+    {% endfor %}
+}
