--- a/roles/commcare_sync/templates/superset/superset_supervisor_config.j2
+++ b/roles/commcare_sync/templates/superset/superset_supervisor_config.j2
@@ -5,6 +5,7 @@ command = {{ superset_virtualenv_dir }}/bin/superset_start
 user = {{ app_user }}
 stdout_logfile = {{ log_dir }}/superset.log
 stderr_logfile = {{ log_dir }}/superset.log
+stopasgroup = true
 
 ; disabling supervisor default log rotation feature as it renaming 
 ; and recreating the log file. Due to which we are running into file permission issues.
