Don't import settings.
settings.py imports local_settings.py

--- a/roles/commcare_sync/templates/django/settings_local.py.j2
+++ b/roles/commcare_sync/templates/django/settings_local.py.j2
@@ -1,4 +1,4 @@
-from .settings import *
+# Local Django settings for production
 
 {% if django_secret_key %}
 SECRET_KEY = '{{ django_secret_key }}'
